--- a/app/src/main/res/layout/activity_activity_list.xml
+++ b/app/src/main/res/layout/activity_activity_list.xml
@@ -1,21 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="#A6C8E0"> <!-- Màu nền xanh dương nhạt -->
 
-    <Button
-        android:id="@+id/btnAddActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Activity" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewActivities"
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="8dp" />
+        android:layout_height="wrap_content"
+        android:background="#2196F3"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:elevation="4dp"
+        android:title="Activity List"
+        android:titleTextColor="@android:color/white" />
 
-</LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:padding="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnAddActivity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Activity"
+                android:background="#2196F3"
+                android:textColor="@android:color/white" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewActivities"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:paddingTop="8dp" />
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
