--- a/app/src/main/res/layout/fragment_meal_log.xml
+++ b/app/src/main/res/layout/fragment_meal_log.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is the Sleep Log tab."
+        android:text="This is the Meal Log tab."
         android:textSize="20sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
