sửa giao diện, thêm log api nutiotion

--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -61,7 +61,9 @@
             android:hint="Enter minerals"
             android:inputType="textMultiLine" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:padding="12dp"
+            android:background="@drawable/button_background"
             android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
