--- a/app/src/main/res/layout/activity_userinf.xml
+++ b/app/src/main/res/layout/activity_userinf.xml
@@ -107,7 +107,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
+        android:background="@drawable/button_background"
         android:id="@+id/buttonSave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
