--- a/app/src/main/res/layout/activity_activity_list.xml
+++ b/app/src/main/res/layout/activity_activity_list.xml
@@ -26,12 +26,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:padding="12dp"
+                android:background="@drawable/button_background"
                 android:id="@+id/btnAddActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Activity"
-                android:background="#2196F3"
+
                 android:textColor="@android:color/white" />
 
             <androidx.recyclerview.widget.RecyclerView
