--- a/app/src/main/res/layout/activity_add_update.xml
+++ b/app/src/main/res/layout/activity_add_update.xml
@@ -72,12 +72,14 @@
                 android:layout_height="wrap_content"
                 android:timePickerMode="spinner" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:padding="12dp"
+                android:background="@drawable/button_background"
                 android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Save"
-                android:background="#2196F3"
+                
                 android:textColor="@android:color/white"
                 android:layout_marginTop="16dp"/>
         </LinearLayout>
