--- a/app/src/main/res/layout/activity_add_update_sleep_log.xml
+++ b/app/src/main/res/layout/activity_add_update_sleep_log.xml
@@ -63,12 +63,14 @@
                 android:layout_height="wrap_content"
                 android:timePickerMode="spinner" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:padding="12dp"
+                android:background="@drawable/button_background"
                 android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="#2196F3"
+
                 android:text="Save"
                 android:textColor="@android:color/white" />
         </LinearLayout>
