--- a/app/src/main/res/layout/dialog_meal_log_details.xml
+++ b/app/src/main/res/layout/dialog_meal_log_details.xml
@@ -1,22 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#A6C8E0"
-    android:padding="16dp">
+    android:background="#FFFFFF"
+    android:padding="16dp"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:layout_margin="20dp"
+    android:elevation="8dp">
+<TextView
+android:id="@+id/tvNutritionalInfo"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="Nutritional Info"
+android:textSize="20sp"
+android:textStyle="bold"
+android:textColor="#333333"
+    android:paddingBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/tvNutritionalInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nutritional Info"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
 
-    <Button
-        android:id="@+id/btnClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Close"
-        android:layout_below="@id/tvNutritionalInfo"
-        android:layout_marginTop="16dp"/>
-</RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:background="@drawable/button_background"
+android:id="@+id/btnClose"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Close"
+android:textColor="#FFFFFF"
+
+    android:padding="12dp"
+    android:layout_marginTop="8dp"
+    android:drawablePadding="8dp"
+    android:gravity="center"/>
+    </LinearLayout>
