--- a/app/src/main/res/layout/activity_health_advice.xml
+++ b/app/src/main/res/layout/activity_health_advice.xml
@@ -16,33 +16,31 @@
         android:hint="Nhập văn bản để phân tích"
         app:layout_constraintBottom_toTopOf="@+id/buttonPredict"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:padding="12dp"
-        android:background="@drawable/button_background"
         android:id="@+id/buttonPredict"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="155dp"
-        android:layout_marginBottom="351dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
         android:text="Dự đoán"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextInput" />
 
     <TextView
         android:id="@+id/textViewResult"
-        android:layout_width="383dp"
-        android:layout_height="166dp"
-        android:layout_marginTop="178dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="382dp"
+        android:layout_height="390dp"
         android:layout_marginBottom="38dp"
         android:paddingTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextInput"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
