--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -14,27 +14,30 @@
         android:textColor="#000000" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:padding="12dp"
-        android:background="@drawable/button_background"
         android:id="@+id/btnUpdate"
-        android:layout_width="wrap_content"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
         android:text="Update"
 
         android:textColor="@android:color/white" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:padding="12dp"
-        android:background="@drawable/button_background"
         android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
+        android:layout_width="123dp"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
         android:text="Delete"
 
         android:textColor="@android:color/white" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:padding="12dp"
+        android:layout_margin="12dp"
         android:background="@drawable/button_background"
         android:id="@+id/btnSetReminder"
         android:layout_width="wrap_content"
