--- a/app/src/main/res/layout/activity_sleep_log_item.xml
+++ b/app/src/main/res/layout/activity_sleep_log_item.xml
@@ -44,26 +44,32 @@
             android:textColor="#757575"
             android:textSize="14sp" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:padding="12dp"
+            android:layout_margin="12dp"
+            android:background="@drawable/button_background"
             android:id="@+id/btnUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:background="#2196F3"
+
             android:text="Update"
             android:textColor="@android:color/white" />
 
         <!-- Nút Delete -->
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:padding="12dp"
+            android:layout_margin="12dp"
+            android:background="@drawable/button_background"
             android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toStartOf="@id/btnUpdate"
-            android:background="#2196F3"
+
             android:text="Delete"
             android:textColor="@android:color/white" />
     </LinearLayout>
