--- a/app/src/main/res/layout/fragment_meal_log.xml
+++ b/app/src/main/res/layout/fragment_meal_log.xml
@@ -11,13 +11,14 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:padding="12dp"
-
+        android:layout_margin="12dp"
+        android:background="@drawable/button_background"
         android:id="@+id/btnNutritionTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:background="@drawable/button_background"
+        android:textColor="#FFFFFF"
 
         android:text="Nutrition Total"
         android:backgroundTint="@null"/> <!-- Set the background -->
