--- a/app/src/main/res/layout/activity_health_advice.xml
+++ b/app/src/main/res/layout/activity_health_advice.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:background="@drawable/button_background"
+        android:textColor="#FFFFFF"
         android:padding="12dp"
         android:text="Dự đoán"
         app:layout_constraintBottom_toBottomOf="parent"
