--- a/app/src/main/res/layout/activity_set_reminder.xml
+++ b/app/src/main/res/layout/activity_set_reminder.xml
@@ -36,12 +36,16 @@
                 android:layout_height="wrap_content"
                 android:timePickerMode="spinner" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:padding="12dp"
+                android:layout_margin="12dp"
+                android:background="@drawable/button_background"
                 android:id="@+id/btnSetReminder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set Reminder"
-                android:background="#2196F3"
+
+
                 android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
