--- a/app/src/main/res/layout/activity_userinf.xml
+++ b/app/src/main/res/layout/activity_userinf.xml
@@ -111,6 +111,7 @@
         android:background="@drawable/button_background"
         android:id="@+id/buttonSave"
         android:layout_width="0dp"
+        android:textColor="#FFFFFF"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Lưu"
