--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -41,7 +41,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:padding="12dp"
+        android:layout_margin="12dp"
         android:background="@drawable/button_background"
+        android:textColor="#FFFFFF"
         android:id="@+id/buttonSaveFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
