--- a/app/src/main/res/layout/dialog_date_range.xml
+++ b/app/src/main/res/layout/dialog_date_range.xml
@@ -17,6 +17,9 @@
         android:hint="End Date" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:padding="12dp"
+        android:textColor="#FFFFFF"
+        android:layout_margin="12dp"
         android:background="@drawable/button_background"
         android:id="@+id/btnCalculate"
         android:layout_width="wrap_content"
@@ -24,9 +27,13 @@
         android:text="Calculate" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/button_background"
         android:id="@+id/btnClose"
-        android:layout_width="wrap_content"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:text="Close" />
+        android:layout_margin="12dp"
+        android:width="25dp"
+        android:background="@drawable/button_background"
+        android:padding="12dp"
+        android:text="Close"
+        android:textColor="#FFFFFF" />
 </LinearLayout>
